--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,34 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aperez-b <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: mkaraden <mkaraden@student.42istanbul.c    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/07/07 10:28:33 by aperez-b          #+#    #+#              #
-#    Updated: 2023/04/05 13:44:45 by aperez-b         ###   ########.fr        #
+#    Updated: 2023/05/26 19:14:10 by mkaraden         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-# Color Aliases
-DEFAULT = \033[0;39m
-GRAY = \033[0;90m
-RED = \033[0;91m
-GREEN = \033[0;92m
-YELLOW = \033[0;93m
-BLUE = \033[0;94m
-MAGENTA = \033[0;95m
-CYAN = \033[0;96m
-WHITE = \033[0;97m
-
-SHELL=/bin/bash
-UNAME = $(shell uname -s)
-PRINTF = echo
-ifeq ($(UNAME), Linux)
-	PRINTF = echo -e
-endif
 
 # Make variables
-PRINTF = printf
-CC = gcc -MD
+CC = gcc 
 CFLAGS = -Wall -Wextra -Werror
 AR = ar rcs
 RM = rm -f
@@ -93,54 +75,26 @@ OBJB = $(addprefix $(OBJB_DIR)/, $(SRCB:.c=.o))
 
 OBJA = $(addprefix $(OBJA_DIR)/, $(SRCA:.c=.o))
 
-# Progress vars
-SRC_COUNT_TOT := $(shell expr $(shell echo -n $(SRC) | wc -w) - $(shell ls -l $(OBJ_DIR) 2>&1 | grep ".o" | wc -l) + 1)
-ifeq ($(shell test $(SRC_COUNT_TOT) -lt 0; echo $$?),0)
-	SRC_COUNT_TOT := $(shell echo -n $(SRC) | wc -w)
-endif
-SRC_COUNT := 0
-SRC_PCT = $(shell expr 100 \* $(SRC_COUNT) / $(SRC_COUNT_TOT))
-SRCB_COUNT_TOT := $(shell expr $(shell echo -n $(SRCB) | wc -w) - $(shell ls -l $(OBJB_DIR) 2>&1 | grep ".o" | wc -l) + 1)
-ifeq ($(shell test $(SRCB_COUNT_TOT) -lt 0; echo $$?),0)
-	SRCB_COUNT_TOT := $(shell echo -n $(SRCB) | wc -w)
-endif
-SRCB_COUNT := 0
-SRCB_PCT = $(shell expr 100 \* $(SRCB_COUNT) / $(SRCB_COUNT_TOT))
-SRCA_COUNT_TOT := $(shell expr $(shell echo -n $(SRCA) | wc -w) - $(shell ls -l $(OBJA_DIR) 2>&1 | grep ".o" | wc -l) + 1)
-ifeq ($(shell test $(SRCA_COUNT_TOT) -lt 0; echo $$?),0)
-	SRCA_COUNT_TOT := $(shell echo -n $(SRCA) | wc -w)
-endif
-SRCA_COUNT := 0
-SRCA_PCT = $(shell expr 100 \* $(SRCA_COUNT) / $(SRCA_COUNT_TOT))
 
 all: $(NAME)
 
 $(NAME): $(OBJ) $(OBJB) $(OBJA) | $(BIN_DIR)
-	@$(AR) $(NAME) $^
-	@$(PRINTF) "\r%100s\r$(GREEN)$(BIN) is up to date!$(DEFAULT)\n"
+	$(AR) $(NAME) $^
 
 bonus: $(OBJB) | $(BIN_DIR)
-	@$(AR) $(NAME) $^
-	@$(PRINTF) "\r%100s\r$(MAGENTA)Bonus $(BIN) is up to date!$(DEFAULT)\n"
+	$(AR) $(NAME) $^
 
 additional: $(OBJA) | $(BIN_DIR)
-	@$(AR) $(NAME) $^
-	@$(PRINTF) "\r%100s\r$(YELLOW)Additional $(BIN) is up to date!$(DEFAULT)\n"
+	$(AR) $(NAME) $^
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c | $(OBJ_DIR)
-	@$(eval SRC_COUNT = $(shell expr $(SRC_COUNT) + 1))
-	@$(PRINTF) "\r%100s\r[ %d/%d (%d%%) ] Compiling $(BLUE)$<$(DEFAULT)..." "" $(SRC_COUNT) $(SRC_COUNT_TOT) $(SRC_PCT)
-	@$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJB_DIR)/%.o: $(SRCB_DIR)/%.c | $(OBJB_DIR)
-	@$(eval SRCB_COUNT = $(shell expr $(SRCB_COUNT) + 1))
-	@$(PRINTF) "\r%100s\r[ %d/%d (%d%%) ] Compiling $(MAGENTA)$<$(DEFAULT)..." "" $(SRCB_COUNT) $(SRCB_COUNT_TOT) $(SRCB_PCT)
-	@$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJA_DIR)/%.o: $(SRCA_DIR)/%.c | $(OBJA_DIR)
-	@$(eval SRCA_COUNT = $(shell expr $(SRCA_COUNT) + 1))
-	@$(PRINTF) "\r%100s\r[ %d/%d (%d%%) ] Compiling $(YELLOW)$<$(DEFAULT)..." "" $(SRCA_COUNT) $(SRCA_COUNT_TOT) $(SRCA_PCT)
-	@$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJ_DIR):
 	@mkdir -p $(OBJ_DIR)
@@ -155,31 +109,16 @@ $(BIN_DIR):
 	@mkdir -p $(BIN_DIR)
 
 clean:
-	@$(PRINTF) "$(CYAN)Cleaning up object files in libft...$(DEFAULT)\n"
-	@$(RM) -r $(OBJ_DIR)
-	@$(RM) -r $(OBJB_DIR)
-	@$(RM) -r $(OBJA_DIR)
+	$(RM) -r $(OBJ_DIR)
+	$(RM) -r $(OBJB_DIR)
+	$(RM) -r $(OBJA_DIR)
 
 fclean: clean
-	@$(RM) -r $(BIN_DIR)
-	@$(PRINTF) "$(CYAN)Removed $(NAME)$(DEFAULT)\n"
+	$(RM) -r $(BIN_DIR)
 
-create_dirs:
-
-norminette:
-	@$(PRINTF) "$(CYAN)\nChecking norm for libft...$(DEFAULT)\n"
-	@norminette -R CheckForbiddenSourceHeader $(SRC_DIR) $(SRCB_DIR) $(SRCA_DIR) inc/libft.h
 
 re: fclean
 	@make all
 
-git:
-	git add .
-	git commit
-	git push
 
--include $(OBJ_DIR)/*.d
--include $(OBJB_DIR)/*.d
--include $(OBJA_DIR)/*.d
-
-.PHONY: all bonus additional clean fclean git norminette re 
+.PHONY: all bonus additional clean fclean re 
